--- a/climate/templates/frontoffice/water_usages/water_usage_list.html
+++ b/climate/templates/frontoffice/water_usages/water_usage_list.html
@@ -14,7 +14,7 @@
             </tr>
         </thead>
         <tbody>
-            {% for source in water_sources %}
+            {% for source in water_usages %}
             <tr>
                 <td>{{ source.type }}</td>
                 <td>{{ source.location }}</td>
