--- a/climate/templates/frontoffice/water_usages/water_usage_list.html
+++ b/climate/templates/frontoffice/water_usages/water_usage_list.html
@@ -3,25 +3,26 @@
 {% block content %}
 <div class="container card col-9 p-4 mt-4">
     <h3>Liste des sources d'eau</h3>
-    <a href="{% url 'create_water_source' %}" class="btn btn-primary mb-3">Ajouter une source d'eau</a>
+    <a href="{% url 'create_water_usage' %}" class="btn btn-primary mb-3">Ajouter une source d'eau</a>
     <table class="table">
         <thead>
             <tr>
-                <th>Type</th>
-                <th>Location</th>
-                <th>Capacity</th>
+                <th>irrigation_plan</th>
+                <th>water_source</th>
+                <th>amount_used</th>
                 <th>Actions</th>
             </tr>
         </thead>
         <tbody>
+           
             {% for source in water_usages %}
             <tr>
-                <td>{{ source.type }}</td>
-                <td>{{ source.location }}</td>
-                <td>{{ source.capacity }}</td>
+                <td>{{ source.irrigation_plan }}</td>
+                <td>{{ source.water_source }}</td>
+                <td>{{ source.amount_used }}</td>
                 <td>
-                    <a href="{% url 'water_source_update' water_source_id=source.id %}" class="btn btn-link">Edit</a>
-                    <form method="post" action="{% url 'water_source_delete' water_source_id=source.id %}" style="display:inline;">
+                    <a href="{% url 'water_usage_update' water_usage_id=source.id %}" class="btn btn-link">Edit</a>
+                    <form method="post" action="{% url 'water_usage_delete' water_usage_id=source.id %}" style="display:inline;">
                         {% csrf_token %}
                         <button type="submit" class="btn btn-link text-danger" onclick="return confirm('Are you sure you want to delete this water source?');">Delete</button>
                     </form>
