--- a/climate/templates/frontoffice/field/create_field.html
+++ b/climate/templates/frontoffice/field/create_field.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <div class="container card col-9 p-4 mt-4">
-    <h3>Créer un nouvel événement écoresponsable</h3>
+    <h3>Create new field</h3>
 
     <form method="post" action="{% url 'create_field' %}">
         {% csrf_token %}
