--- a/climate/templates/frontoffice/template/tables.html
+++ b/climate/templates/frontoffice/template/tables.html
@@ -2,6 +2,20 @@
 
 {% block content %}
 
+<!-- home.html or any template -->
+{% if user.is_authenticated %}
+    <p>Welcome, {{ user.username }}!</p>
+    <a href="{% url 'logout' %}">Logout</a>
+{% else %}
+    <p>You are not logged in.</p>
+    <a href="{% url 'login' %}">Login</a>
+    <a href="{% url 'register' %}">Register</a>
+{% endif %}
+
+
+
+***********************************************************
+
 <div class="row">
     <div class="col-12">
         <div class="card my-4">
