--- a/climate/templates/frontoffice/layout/sidebar.html
+++ b/climate/templates/frontoffice/layout/sidebar.html
@@ -12,156 +12,92 @@
     </a>
   </div>
   <hr class="horizontal light mt-0 mb-2">
-  <div class="collapse navbar-collapse  w-auto " id="sidenav-collapse-main">
+  <div class="collapse navbar-collapse w-auto" id="sidenav-collapse-main">
     <ul class="navbar-nav">
-      <!-- <li class="nav-item">
-          <a class="nav-link text-white " href="../pages/dashboard.html">
-            <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
-              <i class="material-icons opacity-10">dashboard</i>
-            </div>
-            <span class="nav-link-text ms-1">Dashboard</span>
-          </a>
-        </li> 
         <li class="nav-item">
-          <a class="nav-link text-white " href="../pages/tables.html">
-            <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
-              <i class="material-icons opacity-10">table_view</i>
-            </div>
-            <span class="nav-link-text ms-1">Tables</span>
-          </a>
+            <a class="nav-link text-white" href="/fields/">
+                <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
+                    <i class="material-icons opacity-10">terrain</i>
+                </div>
+                <span class="nav-link-text ms-1">Field</span>
+            </a>
         </li>
+
         <li class="nav-item">
-          <a class="nav-link text-white " href="../pages/billing.html">
-            <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
-              <i class="material-icons opacity-10">receipt_long</i>
-            </div>
-            <span class="nav-link-text ms-1">Billing</span>
-          </a>
+            <a class="nav-link text-white" href="/crops/">
+                <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
+                    <i class="material-icons opacity-10">agriculture</i>
+                </div>
+                <span class="nav-link-text ms-1">Crops</span>
+            </a>
         </li>
+
         <li class="nav-item">
-          <a class="nav-link text-white " href="../pages/virtual-reality.html">
-            <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
-              <i class="material-icons opacity-10">view_in_ar</i>
-            </div>
-            <span class="nav-link-text ms-1">Virtual Reality</span>
-          </a>
+            <a class="nav-link text-white" href="/fertilization-schedules/">
+                <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
+                    <i class="material-icons opacity-10">schedule</i>
+                </div>
+                <span class="nav-link-text ms-1">Fertilizations</span>
+            </a>
         </li>
+
         <li class="nav-item">
-          <a class="nav-link text-white " href="../pages/rtl.html">
-            <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
-              <i class="material-icons opacity-10">format_textdirection_r_to_l</i>
-            </div>
-            <span class="nav-link-text ms-1">RTL</span>
-          </a>
+            <a class="nav-link text-white" href="/predict-fertilization/">
+                <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
+                    <i class="material-icons opacity-10">analytics</i>
+                </div>
+                <span class="nav-link-text ms-1">Fertilization Prediction</span>
+            </a>
         </li>
+
         <li class="nav-item">
-          <a class="nav-link text-white " href="../pages/notifications.html">
-            <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
-              <i class="material-icons opacity-10">notifications</i>
-            </div>
-            <span class="nav-link-text ms-1">Notifications</span>
-          </a>
+            <a class="nav-link text-white" href="/api/">
+                <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
+                    <i class="material-icons opacity-10">water_drop</i>
+                </div>
+                <span class="nav-link-text ms-1">Irrigation Prediction</span>
+            </a>
         </li>
-        -->
 
-      <li class="nav-item">
-        <a class="nav-link text-white" href="/fields/">
-          <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
-            <i class="material-icons opacity-10">dashboard</i>
-          </div>
-          <span class="nav-link-text ms-1">Field</span>
-        </a>
-      </li>
+        <li class="nav-item">
+            <a class="nav-link text-white" href="/water_sources/">
+                <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
+                    <i class="material-icons opacity-10">water</i>
+                </div>
+                <span class="nav-link-text ms-1">Water Sources</span>
+            </a>
+        </li>
 
+        <li class="nav-item">
+            <a class="nav-link text-white" href="/water_usages/">
+                <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
+                    <i class="material-icons opacity-10">opacity</i>
+                </div>
+                <span class="nav-link-text ms-1">Water Usage</span>
+            </a>
+        </li>
 
-      <li class="nav-item">
-        <a class="nav-link text-white" href="/crops/">
-          <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
-            <i class="material-icons opacity-10">dashboard</i>
-          </div>
-          <span class="nav-link-text ms-1">Crops</span>
-        </a>
-      </li>
+        <li class="nav-item">
+            <a class="nav-link text-white" href="/predict-water-quality/">
+                <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
+                    <i class="material-icons opacity-10">science</i>
+                </div>
+                <span class="nav-link-text ms-1">Predict Water Quality</span>
+            </a>
+        </li>
 
-
-      <li class="nav-item">
-        <a class="nav-link text-white" href="/fertilization-schedules/">
-          <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
-            <i class="material-icons opacity-10">dashboard</i>
-          </div>
-          <span class="nav-link-text ms-1">Fertualisations</span>
-        </a>
-      </li>
-
-      <li class="nav-item">
-        <a class="nav-link text-white" href="/predict-fertilization/ ">
-          <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
-            <i class="material-icons opacity-10">dashboard</i>
-          </div>
-          <span class="nav-link-text ms-1">fertilization prediction</span>
-        </a>
-      </li>
-
-
-      <li class="nav-item">
-        <a class="nav-link text-white" href="/api/ ">
-          <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
-            <i class="material-icons opacity-10">dashboard</i>
-          </div>
-          <span class="nav-link-text ms-1">Irrigation prediction</span>
-        </a>
-      </li>
-
-      <li class="nav-item">
-        <a class="nav-link text-white" href="/water_sources/">
-          <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
-            <i class="material-icons opacity-10">dashboard</i>
-          </div>
-          <span class="nav-link-text ms-1">Water sources</span>
-        </a>
-      </li>
-
-      <li class="nav-item">
-        <a class="nav-link text-white" href="/water_usages/">
-          <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
-            <i class="material-icons opacity-10">dashboard</i>
-          </div>
-          <span class="nav-link-text ms-1">Water usage</span>
-        </a>
-      </li>
-
-      <li class="nav-item">
-        <a class="nav-link text-white" href="/predict-water-quality/">
-          <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
-            <i class="material-icons opacity-10">dashboard</i>
-          </div>
-          <span class="nav-link-text ms-1">Predict water quality</span>
-        </a>
-      </li>
+        <li class="nav-item">
+            <a class="nav-link text-white" href="/predict/">
+                <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
+                    <i class="material-icons opacity-10">bar_chart</i>
+                </div>
+                <span class="nav-link-text ms-1">Predict Water Usage</span>
+            </a>
+        </li>
+    </ul>
+</div>
 
 
-      <li class="nav-item">
-        <a class="nav-link text-white" href="/predict-water-quality/">
-          <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
-            <i class="material-icons opacity-10">dashboard</i>
-          </div>
-          <span class="nav-link-text ms-1">Predict water quality</span>
-        </a>
-      </li>
-
-
-      <li class="nav-item mt-3">
-        <h6 class="ps-4 ms-2 text-uppercase text-xs text-white font-weight-bolder opacity-8">Account pages</h6>
-      </li>
-
-      <li class="nav-item">
-        <a class="nav-link text-white " href="../pages/sign-in.html">
-          <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
-            <i class="material-icons opacity-10">login</i>
-          </div>
-          <span class="nav-link-text ms-1">Sign In</span>
-        </a>
-      </li>
     </ul>
   </div>
 
